new segment auto assignment implemented
